# TP_OpenMP_MPI

./: .gitignore  Dockerfile
mpi/examples/: compil.sh  slurm_script.sh
mpi/examples/collectives/: bcast.cpp  scatter_gather.cpp
mpi/examples/point_to_point/: comm_modes.cpp
mpi/exercises/arrays/: CMakeLists.txt  slurm_script.sh  sort_several_arrays_program.cpp  sort_single_array_program.cpp  sort_single_array_program_2.cpp
mpi/exercises/arrays/array_lib/: ArrayHandler.cpp  ArrayHandler.hpp  array_functions.cpp  array_functions.hpp
mpi/exercises/deadlock/: deadlock.cpp  slurm_script.sh
mpi/exercises/heat-equation/: README.md  skeleton.py  submit_mpi4py.sh
mpi/exercises/heat-equation/serial/: heat.py  submit_serial.sh
mpi/exercises/heat-equation/solution/: heat-p2p.py  submit_mpi4py.sh
openmp/: compil.sh
openmp/examples/just_parallel/: just_parallel.c  just_parallel_withVariableClause.c
openmp/examples/tasks/: task_ex.c
openmp/exercises/calculMat/: calculMat.c
openmp/exercises/pi/: pi.c
openmp/exercises/reduction_tab/: reduction_tab.c
